--- a/app/options.html
+++ b/app/options.html
@@ -22,7 +22,7 @@
         </form>
     </div>
     <div id="links">
-		<a id="report-link" href="https://github.com/Taknok/youtube-auto-like/issues" title="Donate" target="_blank">Report Issue</a>
+		<a id="report-link" href="https://github.com/Taknok/youtube-auto-like/issues" title="Report Issue" target="_blank">Report Issue</a>
 		<a id="donate-link" href="https://www.paypal.me/austencm/" title="Donate" target="_blank">Donate</a>
         <a id="github-link" href="https://github.com/Taknok/youtube-auto-like" title="GitHub" target="_blank">
             <svg>
