Implementation of internationalization

--- a/app/options.html
+++ b/app/options.html
@@ -13,11 +13,14 @@
         <form id="options-form" enctype="multipart/form-data">
             <div class="form-group">
                 <label>
-                    <input type="radio" name="like_what" value="subscribed">Like only videos from subscribed channels</label>
+                    <input type="radio" name="like_what" value="subscribed"><span id="i18n-like_subscribe"></span>
+				</label>
                 <label>
-                    <input type="radio" name="like_what" value="all">Like all videos</label>
+                    <input type="radio" name="like_what" value="all"><span id="i18n-like_all"></span>
+				</label>
                 <label>
-                    <input type="radio" name="like_what" value="none" id="disable_like">Disable</label>
+                    <input type="radio" name="like_what" value="none" id="disable_like"><span id="i18n-like_none"></span>
+				</label>
             </div>
         </form>
     </div>
