Add font locally
Add fonts locally because Mozilla doesn't want plugin with remote include

It's normal, people could link a custom url and later change the content for a virus.

--- a/app/options.html
+++ b/app/options.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:300,700">
+    <link href="styles/fonts.css" rel="stylesheet" type="text/css">
     <link href="styles/options.css" rel="stylesheet" type="text/css">
 </head>
 
