--- a/app/options.html
+++ b/app/options.html
@@ -29,7 +29,7 @@
 				</span><br>
 				<span>
 					<input id="minute-like" type="radio" name="type_timer" value="minute" class="toggle-on-button"><label for="minute-like">Minutes</label>
-					<input id="minute-value" type="number" name="timer_value" min="0" size="1" class="toggle-content">
+					<input id="minute-value" type="number" name="timer_value" min="0" step="0.017" lang="en" class="toggle-content">
 				</span><br>
 			</div>
 		</div>
