--- a/app/options.html
+++ b/app/options.html
@@ -36,7 +36,7 @@
 	</form>
 	</div>
 	<div id="links">
-		<a id="donate-link" href="https://www.paypal.me/austencm/" title="Donate" target="_blank">__MSG_linkDonate__</a>
+		<a id="donate-link" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F8J6T6WHJBRAA" title="Donate" target="_blank">__MSG_linkDonate__</a>
 		<a id="github-link" href="https://github.com/Taknok/youtube-auto-like" title="GitHub" target="_blank">
 		<svg>
 			<use xlink:href="#icon-git"></use>
