i28n update with new layout
- Add translation for en, es & fr

--- a/app/options.html
+++ b/app/options.html
@@ -20,15 +20,15 @@
 	<hr>
 	<form id="options-form-timer" enctype="multipart/form-data">
 		<div class="form-group">
-			<input id="instant_like" type="radio" name="like_timer" value="instant"><label for="instant_like">Instant Like</label><br>
-			<input id="custom_like" type="radio" name="like_timer" value="custom_timer" class="toggle-on-button"><label for="custom_like">Custom Timer</label><br>
+			<input id="instant_like" type="radio" name="like_timer" value="instant"><label for="instant_like">__MSG_optLikeInstant__</label><br>
+			<input id="custom_like" type="radio" name="like_timer" value="custom_timer" class="toggle-on-button"><label for="custom_like">__MSG_optLikeCustom__</label><br>
 			<div id="options-timer" class="toggle-content">
 				<span>
-					<input id="percentage-like" type="radio" name="type_timer" value="percentage" class="toggle-on-button"><label for="percentage-like">Percentage</label>
+					<input id="percentage-like" type="radio" name="type_timer" value="percentage" class="toggle-on-button"><label for="percentage-like">__MSG_optLikePercentage__</label>
 					<input id="percentage-value" type="number" name="timer_value" min="0" max="99" size="1" maxlength="2" class="toggle-content">
 				</span><br>
 				<span>
-					<input id="minute-like" type="radio" name="type_timer" value="minute" class="toggle-on-button"><label for="minute-like">Minutes</label>
+					<input id="minute-like" type="radio" name="type_timer" value="minute" class="toggle-on-button"><label for="minute-like">__MSG_optLikeMinutes__</label>
 					<input id="minute-value" type="number" name="timer_value" min="0" step="0.017" lang="en" class="toggle-content">
 				</span><br>
 			</div>
