--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,9 +13,7 @@
 	<h1 id="title"><strong>YouTube Auto Like</strong></h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Add update manager</li>
-		<li>Add options to like after an amount of time</li>
-		<li>Support german language</li>
+		<li>Fix bugs in playlist</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
