--- a/app/options.html
+++ b/app/options.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<h1 id="title"><strong>YouTube</strong> __MSG_appNamePart2__</h1>
+	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<div id="options-wrap">
 	<form id="options-form-target" enctype="multipart/form-data">
 		<div class="form-group">
