Brackground fix & Add patch note
Add a check that verifiy this is a plugin update and not a firefox update. Firefox update also trigger "onInstall".

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -10,14 +10,26 @@
 </head>
 
 <body>
-	<h1 id="title"><strong>YouTube Auto Like</strong></h1>
+	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Fix bugs in playlist</li>
+		<li>Add PL and NL</li>
+		<li>Improve stabiltity (should start asap and in all conditions)</li>
+		<li>Add Youtube Gaming Support</li>
+		<li>Fix display issue in option</li>
+		<li>Improve update notification (should not pop every time firefox is updated)</li>
+		<li>Fix disabled not working issue</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
-		<a id="donate-link" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F8J6T6WHJBRAA" title="Donate" target="_blank">Donate</a>
+		Feel free to grab me a beer 😊 <a id="donate-link" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F8J6T6WHJBRAA" title="Donate" target="_blank">Donate</a>
+	</div>
+	<div id="credits"><div><b>Credits</b></div>
+		<a href="https://github.com/austencm/youtube-auto-like">Austencm</a></br>
+		<a href="https://github.com/JKetelaar">JKetelaar</a></br>
+		<a href="https://github.com/Szmyk">Szmyk</a></br>
+		<a href="https://github.com/DeadSix27">DeadSix27</a></br>
+		<a href="https://github.com/Hultan">Hulan</a>
 	</div>
 </body>
 
