Fix Display issue in about:addons

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -19,6 +19,7 @@
 		<li>Fix display issue in option</li>
 		<li>Improve update notification (should not pop every time firefox is updated)</li>
 		<li>Fix disabled not working issue</li>
+		<li>Fix display issue in about:addons</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
