Update Youtube Gaming

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,13 +13,8 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Add PL and NL</li>
-		<li>Improve stabiltity (should start asap and in all conditions)</li>
-		<li>Add Youtube Gaming Support</li>
-		<li>Fix display issue in option</li>
-		<li>Improve update notification (should not pop every time firefox is updated)</li>
-		<li>Fix disabled not working issue</li>
 		<li>Fix display issue in about:addons</li>
+		<li>Fix Youtube Gaming update</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
