Update Youtube Playlist

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -15,6 +15,7 @@
 	<ul>
 		<li>Fix display issue in about:addons</li>
 		<li>Fix Youtube Gaming update</li>
+		<li>Fix Youtube playlist update</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
