Begin of White/Black list support
Add in option popup the buttons to manage list
Create logic hide/show for the add this channel button
Create css

--- a/app/options.html
+++ b/app/options.html
@@ -34,6 +34,13 @@
 			</div>
 		</div>
 	</form>
+	<hr>
+	<form id="options-form-list" enctype="multipart/form-data">
+		<div class="form-group">
+			<input type="button" name="list_manage" value="Manage list">
+			<input type="button" name="list_add_creator" value="Add creator" id="list-add-creator" style="visibility:hidden">
+		</div>
+	</form>
 	</div>
 	<div id="links">
 		<a id="donate-link" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F8J6T6WHJBRAA" title="Donate" target="_blank">__MSG_linkDonate__</a>
