Hide Add button when not on creator or video

--- a/app/options.html
+++ b/app/options.html
@@ -37,8 +37,8 @@
 	<hr>
 	<form id="options-form-list" enctype="multipart/form-data">
 		<div class="form-group">
-			<input type="button" name="list_manage" value="Manage list">
-			<input type="button" name="list_add_creator" value="Add creator" id="list-add-creator" style="visibility:hidden">
+			<input id="list-manage" type="button" name="list_manage" value="Manage list">
+			<input id="list-add-creator" type="button" name="list_add_creator" value="Add creator" style="visibility:hidden">
 		</div>
 	</form>
 	</div>
