--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,9 +13,7 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Fix display issue in about:addons</li>
-		<li>Fix Youtube Gaming update</li>
-		<li>Fix Youtube playlist update</li>
+		<li>Add Ukranian. Thank you C4H7Cl2O4P !</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
@@ -26,7 +24,8 @@
 		<a href="https://github.com/JKetelaar">JKetelaar</a></br>
 		<a href="https://github.com/Szmyk">Szmyk</a></br>
 		<a href="https://github.com/DeadSix27">DeadSix27</a></br>
-		<a href="https://github.com/Hultan">Hulan</a>
+		<a href="https://github.com/Hultan">Hulan</a></br>
+		<a href="https://github.com/C4H7Cl2O4P">C4H7Cl2O4P</a>
 	</div>
 </body>
 
