Add random timer

--- a/app/options.html
+++ b/app/options.html
@@ -32,13 +32,7 @@
 					<input id="minute-value" type="number" name="timer_value" min="0" step="0.017" lang="en" class="toggle-content">
 				</span><br>
 			</div>
-		</div>
-	</form>
-	<hr>
-	<form id="options-form-list" enctype="multipart/form-data">
-		<div class="form-group">
-			<input id="list-manage" type="button" name="list_manage" value="Manage list">
-			<input id="list-add-creator" type="button" name="list_add_creator" value="Add creator" style="visibility:hidden">
+			<input id="random_like" type="radio" name="like_timer" value="random"><label for="random_like">__MSG_optLikeRandom__</label><br>
 		</div>
 	</form>
 	</div>
