--- a/app/update_info.html
+++ b/app/update_info.html
@@ -14,6 +14,7 @@
 	<p>What's new :</p>
 	<ul>
 		<li>Add Ukranian. Thank you C4H7Cl2O4P !</li>
+		<li>Add the random timer functionality</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
