--- a/app/options.html
+++ b/app/options.html
@@ -15,6 +15,11 @@
 			<input id="subscribed_like" type="radio" name="like_what" value="subscribed"><label for="subscribed_like">__MSG_optLikeSub__</label><br>
 			<input id="all_like" type="radio" name="like_what" value="all"><label for="all_like">__MSG_optLikeAll__</label><br>
 			<input id="none_like" type="radio" name="like_what" value="none"><label for="none_like">__MSG_optLikeNone__</label><br>
+			<input id="use_list" type="checkbox" name="use_list" class="toggle-on-button"><label for="use_list">__MSG_optUseList__</label><br>
+			<div id="options-list" class="toggle-content">
+				<input id="list-black" type="radio" name="type_list" value="black"><label for="list-black">__MSG_optBlackList__</label><br>
+				<input id="list-white" type="radio" name="type_list" value="white"><label for="list-white">__MSG_optWhiteList__</label>
+			</div>
 		</div>
 	</form>
 	<hr>
@@ -35,6 +40,17 @@
 			<input id="random_like" type="radio" name="like_timer" value="random"><label for="random_like">__MSG_optLikeRandom__</label><br>
 		</div>
 	</form>
+	<hr>
+	<form id="options-form-list" enctype="multipart/form-data">
+		<div class="form-group">
+			<input id="list-manage" type="button" name="list_manage" value="Manage list">
+			<input id="list-add-creator" class="hide-by-default" type="button" name="list_add_creator" value="Add creator">
+			<input id="list-remove-creator" class="hide-by-default" type="button" name="list_remove_creator" value="Remove creator">
+		</div>
+	</form>
+	</div>
+	<div id="debug-div" class="hide-by-default">
+		<input id="debug" type="checkbox" name="debug" ><label for="debug">Debug</label><br>
 	</div>
 	<div id="links">
 		<a id="donate-link" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F8J6T6WHJBRAA" title="Donate" target="_blank">__MSG_linkDonate__</a>
@@ -44,7 +60,7 @@
 		</svg>
 		</a>
 	</div>
-	<script src="scripts/modules/i18n.js"></script><script src="scripts/constants.js"></script><script src="scripts/modules/option-manager.js"></script><script src="scripts/options.js"></script>
+	<script src="scripts/modules/i18n.js"></script><script src="scripts/constants.js"></script><script src="scripts/modules/option-manager.js"></script><script src="scripts/modules/miscellaneous.js"></script><script src="scripts/modules/konami.js" type="text/javascript"></script><script src="scripts/options.js"></script>
 	<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 	<symbol id="icon-git" viewbox="0 0 512 512">
 		<path d="m200 304c2 7 3 15 3 22c0 15-4 31-15 43c-5 6-12 9-20 9c-15 0-27-14-31-30c-3-7-4-15-4-22c0-15 4-31 16-43c5-6 12-9 19-9c16 0 28 14 32 30z m175 0c2 7 3 15 3 22c0 15-4 31-15 43c-5 6-12 9-20 9c-15 0-26-14-31-30c-2-7-4-15-4-22c0-15 5-31 16-43c5-6 12-9 19-9c16 0 28 14 32 30z m47 22c0-44-27-79-70-79c-7 0-25 2-53 6c-13 2-28 3-43 3c-16 0-30-1-43-3c-28-4-45-6-53-6c-43 0-70 35-70 79c0 32 13 56 30 70c18 14 48 22 72 25c12 1 26 2 41 2l46 0c30 0 52-2 79-10c26-9 44-21 55-45c6-12 9-26 9-42z m62-48c0 38-6 68-17 90c-14 29-41 49-67 60c-27 11-67 18-94 19c-14 1-29 2-46 2c-28 0-48-1-79-5c-30-3-54-11-79-22c-25-11-45-30-57-54c-11-22-17-52-17-90c0-43 13-79 38-108c-5-16-8-31-8-47c0-21 5-41 14-60c40 0 65 14 104 45c27-6 55-10 84-10c27 0 53 4 77 9c38-30 64-44 103-44c9 19 14 39 14 60c0 16-3 31-8 46c25 29 38 65 38 109z"></path>
