--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,7 +13,14 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Fix issue caused by youtube home page after youtube modifications. Thank you kopach !</li>
+		<li>Addon support black/white list</li>
+		<p>On a video, a new button is display in the addon option. This button allow to add the creator to the list. Once added you can removed it from the same place while watching one of his video.</br>
+		The manage button allows to read and edit the list.</br>
+		In white list mode all videos in the list will be liked. In black list mode, the videos in the list will never be liked.</p>
+		<li>Debug mode is present</li>
+		<p>Now the console is a less polluted by the addon. You can enable trace by activating the debug mode (how ? > see github).</p>
+		<li>Drop of the old youtube layout support</li>
+		<p>The 'new' material layout is out since 2015. 5y after, 98% of the users are using the material layout. Maintaining the old one is too time consuming for me regardless of my situation. You still can install the <a href="https://addons.mozilla.org/fr/firefox/addon/youtube_auto_like/versions/">addon version 2.3.4</a> if you want to use the old youtube layout or create a PR on the github. Contributions are greatly appreciated.</p>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
