Add note about needing to reload to apply options

--- a/src/options.html
+++ b/src/options.html
@@ -8,10 +8,12 @@
 	<body>
     <header class="header">
       <h1 class="title">
-  			<strong>YouTube</strong> Auto Like
+  			YouTube <strong>Auto Like</strong>
   		</h1>
       <div class="status"></div>
     </header>
+
+    <div class="reload-notice">Reload the page to apply changes.</div>
 
 		<div id="options-wrap">
 			<form id="options-form" enctype="multipart/form-data">
@@ -45,7 +47,7 @@
 		</div>
     <div>
       <p>
-        <span style="opacity: 0.9">Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can</span> <a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>help feed my kitties here</strong></a>. I really appreciate it. &gt;3
+        <span style="opacity: 0.9">Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can</span> <a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>help feed my kitties here</strong></a>. I really appreciate it. &lt;3
       </p>
     </div>
 		<div id="links">
