--- a/src/options.html
+++ b/src/options.html
@@ -51,7 +51,7 @@
       </p>
     </div>
 		<div id="links">
-			<a id="report-link" href="https://github.com/austencm/youtube-auto-like/issues/new?title=Bug%20Report&labels=bug" title="Not working?" target="_blank">⚠️</a>
+			<a id="report-link" href="https://github.com/austencm/youtube-auto-like/issues/new?labels=bug" title="Not working?" target="_blank">⚠️</a>
 			<a id="github-link" href="https://github.com/austencm/youtube-auto-like" title="GitHub" target="_blank">
 				<svg>
 					<use xlink:href="#icon-git"></use>
