Add support for localized attributes

--- a/src/options.html
+++ b/src/options.html
@@ -47,17 +47,29 @@
 		</div>
     <div>
       <p>
-        <span style="opacity: 0.9">Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can</span> <a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>help feed my kitties here</strong></a>. I really appreciate it. &lt;3
+        <span style="opacity: 0.9">Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can <a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>help feed my kitties here</strong></a>. I really appreciate it. &lt;3</span>
       </p>
     </div>
 		<div id="links">
-			<a id="report-link" href="https://github.com/austencm/youtube-auto-like/issues/new?labels=bug" title="Not working?" target="_blank">⚠️</a>
+			<a
+        id="report-link"
+        href="https://github.com/austencm/youtube-auto-like/issues/new?labels=bug"
+        target="_blank"
+        title="__MSG_linkReport__"
+        data-i18n
+      >⚠️</a>
 			<a id="github-link" href="https://github.com/austencm/youtube-auto-like" title="GitHub" target="_blank">
 				<svg>
 					<use xlink:href="#icon-git"></use>
 				</svg>
 			</a>
-      <a id="donate-link" href="https://www.buymeacoffee.com/austen" title="Feed my cats" target="_blank">🐈</a>
+      <a
+        id="donate-link"
+        href="https://www.buymeacoffee.com/austen"
+        target="_blank"
+        title="__MSG_linkDonate__"
+        data-i18n
+      >🐈</a>
 		</div>
 
 		<script src="scripts/options.bundle.js"></script>
