Add reload notice i18n string

--- a/src/options.html
+++ b/src/options.html
@@ -13,7 +13,7 @@
       <div class="status"></div>
     </header>
 
-    <div class="reload-notice">Reload the page to apply changes.</div>
+    <div class="reload-notice">__MSG_reloadNotice__</div>
 
 		<div id="options-wrap">
 			<form id="options-form" enctype="multipart/form-data">
