Update update_info before release
Update the release message for the new fix.

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,8 +13,7 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Update Ukranian. Thank you C4H7Cl2O4P !</li>
-		<li>Fix old youtube issues. Thanks again C4H7Cl2O4P !</li>
+		<li>Fix issue caused by youtube home page after youtube modifications. Thank you kopach !</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
