--- a/app/options.html
+++ b/app/options.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
+	<div id="title">
+		<h1><strong>YouTube</strong> Auto Like</h1>
+		<p id="counter" class="resize" title="Double click to reset"><span id="counter-value"></span> <svg width="1.3em" height="1.3em" viewBox="0 0 30 30">
+			<path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"></path>
+		</svg></p>
+	</div>
 	<div id="options-wrap">
 	<form id="options-form-target" enctype="multipart/form-data">
 		<div class="form-group">
