--- a/app/update_info.html
+++ b/app/update_info.html
@@ -21,6 +21,8 @@
 		<p>Now the console is a less polluted by the addon. You can enable trace by activating the debug mode (how ? > see github).</p>
 		<li>Drop of the old youtube layout support</li>
 		<p>The 'new' material layout is out since 2015. 5y after, 98% of the users are using the material layout. Maintaining the old one is too time consuming for me regardless of my situation. You still can install the <a href="https://addons.mozilla.org/fr/firefox/addon/youtube_auto_like/versions/">addon version 2.3.4</a> if you want to use the old youtube layout or create a PR on the github. Contributions are greatly appreciated.</p>
+		<li>Creation of a counter</li>
+		<p>The counter displayed how many video was liked by the addon. Double click to reset the counter.</p>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
