Timer & Percentage combo
Timer and percentage can be set together, the lower value is taken to
like the video.

--- a/app/options.html
+++ b/app/options.html
@@ -34,12 +34,12 @@
 			<input id="custom_like" type="radio" name="like_timer" value="custom_timer" class="toggle-on-button"><label for="custom_like">__MSG_optLikeCustom__</label><br>
 			<div id="options-timer" class="toggle-content">
 				<span>
-					<input id="percentage-like" type="radio" name="type_timer" value="percentage" class="toggle-on-button"><label for="percentage-like">__MSG_optLikePercentage__</label>
-					<input id="percentage-value" type="number" name="timer_value" min="0" max="99" size="1" maxlength="2" class="toggle-content">
+					<input id="percentage-like" type="checkbox" name="percentage_timer" class="toggle-on-button"><label for="percentage-like">__MSG_optLikePercentage__</label>
+					<input id="percentage-value" type="number" name="percentage_value" min="0" max="99" size="1" maxlength="2" class="toggle-content">
 				</span><br>
 				<span>
-					<input id="minute-like" type="radio" name="type_timer" value="minute" class="toggle-on-button"><label for="minute-like">__MSG_optLikeMinutes__</label>
-					<input id="minute-value" type="number" name="timer_value" min="0" step="0.017" lang="en" class="toggle-content">
+					<input id="minute-like" type="checkbox" name="minute_timer" class="toggle-on-button"><label for="minute-like">__MSG_optLikeMinutes__</label>
+					<input id="minute-value" type="number" name="minute_value" min="0" step="0.25" lang="en" class="toggle-content">
 				</span><br>
 			</div>
 			<input id="random_like" type="radio" name="like_timer" value="random"><label for="random_like">__MSG_optLikeRandom__</label><br>
