--- a/app/update_info.html
+++ b/app/update_info.html
@@ -19,6 +19,8 @@
 		In white list mode all videos in the list will be liked. In black list mode, the videos in the list will never be liked.</p>
 		<li>Timer and Percentage combo</li>
 		<p>Now both option can be selected at the same time. If so, the lowest value will be selected for the video. Thank you Alexandre Pennetier for the suggestion.</p>
+		<li>Fix bug when using custom timer without percentage or minute set.</li>
+		<p>A default behaviour is added to instantly like if no option is selected.</p>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
