--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,6 +13,8 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
+		<li>Fix 'issue' with empty white list</li>
+		<p>Unclear statement (my bad) confuses people with white list. Using white list when empty will prevent any like. Update option statement and fix settings for user with empty list.</p>
 		<li>Translation improvment</li>
 		<p>Update of the Fr and De translation. Thank you Alexandre Pennetier & DeadSix27</br>
 		The manage button allows to read and edit the list.</br>
