--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,18 +13,8 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Reload the settings before liking a video</li>
-		<p>If settings are changed, the next video will taken into account the settings. No need to reload the page again !</p>>
-		<li>Fix 'issue' with empty white list</li>
-		<p>Unclear statement (my bad) confuses people with white list. Using white list when empty will prevent any like. Update option statement and fix settings for user with empty list.</p>
-		<li>Translation improvment</li>
-		<p>Update of the Fr and De translation. Thank you Alexandre Pennetier & DeadSix27</br>
-		The manage button allows to read and edit the list.</br>
-		In white list mode all videos in the list will be liked. In black list mode, the videos in the list will never be liked.</p>
-		<li>Timer and Percentage combo</li>
-		<p>Now both option can be selected at the same time. If so, the lowest value will be selected for the video. Thank you Alexandre Pennetier for the suggestion.</p>
-		<li>Fix bug when using custom timer without percentage or minute set.</li>
-		<p>A default behaviour is added to instantly like if no option is selected.</p>
+		<li>Update to new Youtube</li>
+		<p>Youtube did not change graphically by html changed. Update the add-on to match new html</p>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
@@ -37,7 +27,8 @@
 		<a href="https://github.com/DeadSix27">DeadSix27</a></br>
 		<a href="https://github.com/Hultan">Hulan</a></br>
 		<a href="https://github.com/C4H7Cl2O4P">C4H7Cl2O4P</a>
-		<a href="https://github.com/alexandre-pennetier">Alexandre Pennetier & </a>
+		<a href="https://github.com/alexandre-pennetier">Alexandre Pennetier</a>
+		<a href="https://github.com/msmafra">msmafra</a>
 	</div>
 </body>
 
