Add update checking

--- a/src/options.html
+++ b/src/options.html
@@ -14,6 +14,8 @@
       <div class="status"></div>
     </header>
 
+		<div class="update-notice" hidden></div>
+
     <div class="reload-notice">__MSG_reloadNotice__</div>
 
 		<div id="options-wrap">
