Fix new youtube buttons

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,6 +13,8 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
+		<li>Fix new buttons</li>
+		<p>Youtube change layout of buttons</p>
 		<li>Update to new Youtube</li>
 		<p>Youtube did not change graphically by html changed. Update the add-on to match new html</p>
 	</ul>
