--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,10 +13,11 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
+		<li>Update DE</li>
+		<li>Fix timer bug while add poping up during the video</li>
+		<p>Thank you Plunts</p>
 		<li>Fix new buttons</li>
-		<p>Youtube change layout of buttons</p>
 		<li>Update to new Youtube</li>
-		<p>Youtube did not change graphically by html changed. Update the add-on to match new html</p>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
@@ -31,6 +32,7 @@
 		<a href="https://github.com/C4H7Cl2O4P">C4H7Cl2O4P</a>
 		<a href="https://github.com/alexandre-pennetier">Alexandre Pennetier</a>
 		<a href="https://github.com/msmafra">msmafra</a>
+		<a href="https://github.com/Plunts">Plunts</a>
 	</div>
 </body>
 
