Switch to webpack 5 & reorganize

--- a/src/options.html
+++ b/src/options.html
@@ -4,7 +4,7 @@
     <title>YouTube Auto Like</title>
 	  <meta charset="UTF-8">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,700" rel="stylesheet" />
-		<link href="/options.css" rel="stylesheet" />
+		<link href="css/options.css" rel="stylesheet" />
 	</head>
 	<body>
     <header class="header">
@@ -75,7 +75,7 @@
       >🐈</a>
 		</div>
 
-		<script src="/options.js"></script>
+		<script src="js/options.js"></script>
 
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 			<symbol id="icon-git" viewbox="0 0 512 512">
