--- a/src/options.html
+++ b/src/options.html
@@ -111,7 +111,7 @@
 			</a>
     </div>
 
-    <script src="js/options.js"></script>
+    <script src="options.js"></script>
 
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
       <symbol id="icon-git" viewbox="0 0 512 512">
