Add missing line-breaks in credits

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -29,10 +29,10 @@
 		<a href="https://github.com/Szmyk">Szmyk</a></br>
 		<a href="https://github.com/DeadSix27">DeadSix27</a></br>
 		<a href="https://github.com/Hultan">Hulan</a></br>
-		<a href="https://github.com/C4H7Cl2O4P">C4H7Cl2O4P</a>
-		<a href="https://github.com/alexandre-pennetier">Alexandre Pennetier</a>
-		<a href="https://github.com/msmafra">msmafra</a>
-		<a href="https://github.com/Plunts">Plunts</a>
+		<a href="https://github.com/C4H7Cl2O4P">C4H7Cl2O4P</a></br>
+		<a href="https://github.com/alexandre-pennetier">Alexandre Pennetier</a></br>
+		<a href="https://github.com/msmafra">msmafra</a></br>
+		<a href="https://github.com/Plunts">Plunts</a></br>
 	</div>
 </body>
 
