credit GitMoleo in app

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -33,6 +33,7 @@
 		<a href="https://github.com/alexandre-pennetier">Alexandre Pennetier</a></br>
 		<a href="https://github.com/msmafra">msmafra</a></br>
 		<a href="https://github.com/Plunts">Plunts</a></br>
+		<a href="https://github.com/GitMoleo">GitMoleo</a></br>
 	</div>
 </body>
 
