added the Italian language, added the translation to a missing string

--- a/src/options.html
+++ b/src/options.html
@@ -77,7 +77,7 @@
     </div>
     <div>
       <p>
-        <span style="opacity: 0.9">Hours of development and testing go into maintaining this extension. If you feel it's worth a couple bucks, you can <a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>buy my cats a snack</strong></a>. I really appreciate it. &lt;3</span>
+        <span style="opacity: 0.9">__MSG_donate__<a href="https://www.buymeacoffee.com/austen" target="_blank"><strong>__MSG_donate1__</strong></a>. __MSG_donate2__</span>
       </p>
     </div>
     <div id="links">
