--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,11 +13,7 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Update DE</li>
-		<li>Fix timer bug while add poping up during the video</li>
-		<p>Thank you Plunts</p>
-		<li>Fix new buttons</li>
-		<li>Update to new Youtube</li>
+		<li>Update to new Youtube. Thk to the people involved (<a href="https://github.com/Taknok/youtube-auto-like/issues/49">#49</a><a href="https://github.com/Taknok/youtube-auto-like/issues/50">#50</a>) in the report & fix as I haven't the new layout available)</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
