--- a/app/update_info.html
+++ b/app/update_info.html
@@ -14,6 +14,7 @@
 	<p>What's new :</p>
 	<ul>
 		<li>Update to new Youtube. Thk to the people involved (<a href="https://github.com/Taknok/youtube-auto-like/issues/49">#49</a><a href="https://github.com/Taknok/youtube-auto-like/issues/50">#50</a>) in the report & fix as I haven't the new layout available)</li>
+		<li>Update to adapte to new navigation event triggered by youtube (causing issues while goind to a playlist from home).</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
