--- a/app/update_info.html
+++ b/app/update_info.html
@@ -13,9 +13,7 @@
 	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
 	<p>What's new :</p>
 	<ul>
-		<li>Update to new Youtube. Thk to the people involved (<a href="https://github.com/Taknok/youtube-auto-like/issues/49">#49</a><a href="https://github.com/Taknok/youtube-auto-like/issues/50">#50</a>) in the report & fix as I haven't the new layout available)</li>
-		<li>Update to adapte to new navigation event triggered by youtube (causing issues while goind to a playlist from home).</li>
-		<li>Add Turkish lang support. Thank you <a href="https://github.com/babico">Babico</a> !</li>
+		<li>Update to new Youtube layout. Thank you<a href="https://github.com/Taknok/youtube-auto-like/issues/54">NexusDarkshade</a><a href="https://github.com/Taknok/youtube-auto-like/issues/50">#50</a> !</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
 	<div id="links">
